fix: blockquote align after image block aligned left or right

--- a/src/theme/ItaliaTheme/Blocks/_imageBlock.scss
+++ b/src/theme/ItaliaTheme/Blocks/_imageBlock.scss
@@ -17,3 +17,12 @@
     margin-bottom: 0;
   }
 }
+
+.block.image.align {
+  &.left,
+  &.right {
+    + blockquote {
+      display: inline-block;
+    }
+  }
+}
