--- a/src/theme/ItaliaTheme/_main.scss
+++ b/src/theme/ItaliaTheme/_main.scss
@@ -112,10 +112,10 @@ iframe {
 }
 
 //slate LINK
-.inline-link {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
+// .inline-link {
+//   margin-left: 0.5rem;
+//   margin-right: 0.5rem;
+// }
 
 .slate-editor-link {
   clear: both;
